0.4.2:
- History records which also are bookmarks are now shown in history. Clicking on the star allow to set or unset an history record as bookmark.
- Bookmarks/history storage can be set to an internal database through preferences, for people concerned about privacy or who wants to keep different bookmarks set. Default behaviour is to use Android bookmarks database.
- Handle HTTP Authentication.  

0.4.1:
- Bugfixes for force close under Android >= 3.

0.4.0:
- Feature: Bookmarks and history now use Android stock bookmarks and history database. Your old bookmarks have been saved to your SD card. Go to "Preferences/Manage bookmarks and history" and import file "auto-export.xml" if you want to retrieve them.
- Feature: Zirco can now retrieve your bookmarks from Firefox Sync. Go to "Preferences/Firefox bookmarks" synchronization to start using it!
- Feature: a search can be done on web pages. 
- Add "Share" context menu to bookmarks and history view. 
- New design for start page.
- Remove completed download from download list.
- Notification for completed downloads are removed when clicking on it.

0.3.9:
- Bug fix in history view. Items are now displayed in differents categories (today, last week, last month...)
- Add a button to the left of the url bar (where was the "Home" button) allowing to choose between differents actions (share, select text...)

0.3.8:
- Switching between tabs can now be made in two ways, either the previous fling gesture method, or by using dedicated buttons which are displayed and hidden along with toolbars. The method is customizable in UI preferences. Default is to use he new buttons.
- Much better pinch zoom support.
- New options allowing to display or not the application title bar.
- Bugfixes.

0.3.7:
- Chinese translation.
- Add Share page, Share link, Share image and Share email options.
- Toolbars are now shown and hidden with a quick animation.

0.3.6: