@@ -220,7 +220,7 @@
 			<Preference
 				android:title="@string/PreferencesActivity.PrivacyClearCookiesTitle"
 				android:key="PrivacyClearCookies" />
-		</PreferenceScreen>		
+		</PreferenceScreen>	   
 	</PreferenceCategory>
 	<PreferenceCategory android:title="@string/PreferencesActivity.AdBlockerSettingsCategoryTitle">
 		<CheckBoxPreference
@@ -264,6 +264,11 @@
 			android:defaultValue="STOCK"
 			android:entries="@array/BookmarksDatabaseEntries"
 			android:entryValues="@array/BookmarksDatabaseValues" />
+        <CheckBoxPreference
+            android:title="@string/PreferencesActivity.EnableProxySettings"
+            android:defaultValue="false"
+            android:key="BrowserEnableProxySettings"
+            android:summary="@string/PreferencesActivity.EnableProxySettingsSummary" />
     </PreferenceCategory>
 	<PreferenceCategory android:title="@string/PreferencesActivity.AboutCategoryTitle">
 		<Preference
